--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Maps/Assets
+ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces/Worn_Concrete_Plaster_vb1jdhag
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Enemy
+ContentBrowserDrawer.SelectedPaths=
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -215,7 +215,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/Level_Tester
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
 Hunt_for_blood.TimeStamp=2024.01.16-15.02.45
@@ -1250,38 +1250,36 @@ UATHelper.TimeStamp=2023.10.07-13.13.32
 UATHelper.LastCompileMethod=Unknown
 D3D11RHI.TimeStamp=2023.05.18-10.23.38
 D3D11RHI.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2023.05.18-10.23.40
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.10.07-13.12.56
+HierarchicalLODUtilities.LastCompileMethod=External
+WebBrowser.TimeStamp=2023.10.07-13.13.39
+WebBrowser.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTree_100_Twigs_Leaf_Bearing.GenTree_105_AE3D_03122023-F2-FB_GenTree_100_Twigs_Leaf_Bearing
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_leaves_001.GenTree_105_AE3D_03122023-F2-FB_leaves_001
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTRee_100-Branches_L2_002.GenTree_105_AE3D_03122023-F2-FB_GenTRee_100-Branches_L2_002
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTree_100-Main_Trunk.GenTree_105_AE3D_03122023-F2-FB_GenTree_100-Main_Trunk
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_leaves.GenTree-103_AE3D_03122023-F1_leaves
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTRee_100-Branches_L2_002
-MRUItem1=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTree_100-Main_Trunk
-MRUItem2=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_leaves_001
-MRUItem3=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTree_100_Twigs_Leaf_Bearing
-MRUItem4=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_leaves
-MRUItem5=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_GenTree_-_Twigs_Leaf_Bearing
-MRUItem6=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_GenTree-Main_Trunk
-MRUItem7=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube28
-MRUItem8=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_bridge1
-MRUItem9=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube282
-MRUItem10=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube34
-MRUItem11=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube49
-MRUItem12=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube27
-MRUItem13=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube26
-MRUItem14=/Game/ThirdPerson/Maps/Assets/fbxStairs
-MRUItem15=/Game/ThirdPerson/Maps/Assets/fbxStair_tower26
-MRUItem16=/Game/ThirdPerson/Maps/Assets/fbxStair_pCube1
-MRUItem17=/Game/ThirdPerson/Maps/Assets/fbxStair_group7_pCube5
-MRUItem18=/Game/ThirdPerson/Maps/Assets/Tessalating_Spiral_Stairs
-MRUItem19=/Game/ThirdPerson/Maps/Level_Tester
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTRee_100-Branches_L2_002
+MRUItem2=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTree_100-Main_Trunk
+MRUItem3=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_leaves_001
+MRUItem4=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_GenTree_100_Twigs_Leaf_Bearing
+MRUItem5=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_leaves
+MRUItem6=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_GenTree_-_Twigs_Leaf_Bearing
+MRUItem7=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_GenTree-Main_Trunk
+MRUItem8=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube28
+MRUItem9=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_bridge1
+MRUItem10=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube282
+MRUItem11=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube34
+MRUItem12=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube49
+MRUItem13=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube27
+MRUItem14=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube26
+MRUItem15=/Game/ThirdPerson/Maps/Assets/fbxStairs
+MRUItem16=/Game/ThirdPerson/Maps/Assets/fbxStair_tower26
+MRUItem17=/Game/ThirdPerson/Maps/Assets/fbxStair_pCube1
+MRUItem18=/Game/ThirdPerson/Maps/Assets/fbxStair_group7_pCube5
+MRUItem19=/Game/ThirdPerson/Maps/Assets/Tessalating_Spiral_Stairs
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2937,7 +2935,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Var
 SceneComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+SpringArmComponent=
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
@@ -3197,6 +3195,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Megascans/Surfaces/Worn_Concrete_Plaster_vb1jdhag/MI_Worn_Concrete_Plaster_vb1jdhag_4K.MI_Worn_Concrete_Plaster_vb1jdhag_4K;
 RecentlyPlaced=/Game/Enemy/BP_Spawner.BP_Spawner;
 RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/textures/PalletPlywood_AO.PalletPlywood_AO;
 RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/textures_Tree/GenTree_2_Trunk_Limbs_AE3D_03312023-A-DIFFUSE_Mat.GenTree_2_Trunk_Limbs_AE3D_03312023-A-DIFFUSE_Mat;
@@ -3216,7 +3215,6 @@ RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/GenTree_105_AE3D_03122023-F2-FB_Gen
 RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_GenTree-Main_Trunk.GenTree-103_AE3D_03122023-F1_GenTree-Main_Trunk;
 RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/GenTree-103_AE3D_03122023-F1_GenTree_-_Twigs_Leaf_Bearing.GenTree-103_AE3D_03122023-F1_GenTree_-_Twigs_Leaf_Bearing;
 RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/fbxStairs.fbxStairs;
-RecentlyPlaced=/Game/ThirdPerson/Maps/Assets/Free_bridge6/fbxBridge_pCube343.fbxBridge_pCube343;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3452,7 +3450,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=3
+PreviewFeatureLevel=4
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -3501,8 +3499,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=69.000 Y=529.000
-WindowSize=X=1295.000 Y=735.000
+ScreenPosition=X=68.800 Y=528.800
+WindowSize=X=1296.800 Y=736.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
