--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Worn_Concrete_Plaster_vb1jdhag
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1257,7 +1257,6 @@ WebBrowser.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
@@ -3500,7 +3499,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=68.800 Y=528.800
-WindowSize=X=1296.800 Y=736.800
+WindowSize=X=1298.400 Y=738.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
