Boss Health and attributes global variables
Vida y stamina(sera utilizada para que haga ataques de distancia o ataques epeciales) aun esta en development lo terminare hoy

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1254,37 +1254,33 @@ HierarchicalLODUtilities.TimeStamp=2023.09.30-08.40.54
 HierarchicalLODUtilities.LastCompileMethod=External
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Enemy/ComboAnim/Notify_ComboAttack_AttackSword.Notify_ComboAttack_AttackSword
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/AI_Advanced/Boss/AtributesForEntities_BP.AtributesForEntities_BP
 OpenAssetsAtExit=/Game/AI_Advanced/Boss/WB_HealthBarBOSS.WB_HealthBarBOSS
-OpenAssetsAtExit=/Game/AI_Advanced/BP_Contoller.BP_Contoller
 OpenAssetsAtExit=/Game/AI_Advanced/Boss/BOSS_TRY_BP.BOSS_TRY_BP
-OpenAssetsAtExit=/Game/AI_Advanced/Boss/BT_AI_BOSS.BT_AI_BOSS
-OpenAssetsAtExit=/Game/AI_Advanced/BD_AI.BD_AI
-OpenAssetsAtExit=/Game/AI_Advanced/Boss/BD_AI_BOSS.BD_AI_BOSS
-OpenAssetsAtExit=/Game/AI_Advanced/Boss/BP_Contoller_BOSS.BP_Contoller_BOSS
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI_Advanced/BP_Contoller
-MRUItem1=/Game/AI_Advanced/BP_SpeedEnemySpawn
-MRUItem2=/Game/AI_Advanced/Boss/WB_BOSS
-MRUItem3=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
-MRUItem4=/Game/AI_Advanced/BD_AI_BOSS
-MRUItem5=/Game/AI_Advanced/BT_AI_BOSS
-MRUItem6=/Game/AI_Advanced/BOSS_TRY_BP
-MRUItem7=/Game/Enemy/ComboAnim/Notify_AnimComboEnd
-MRUItem8=/Game/Enemy/ComboAnim/BCP_AttackSystem
-MRUItem9=/Game/Enemy/ComboAnim/Notify_ComboAttack_AttackSword
-MRUItem10=/Game/Enemy/ComboAnim/Attack_IT
-MRUItem11=/Game/Enemy/ComboAnim/Kick_Montage
-MRUItem12=/Game/Enemy/ComboAnim/Attack3_Montage
-MRUItem13=/Game/Enemy/ComboAnim/Attack2_Montage
-MRUItem14=/Game/Enemy/ComboAnim/NewBlueprint
-MRUItem15=/Game/Enemy/ComboAnim/Attack1_Montage
-MRUItem16=/Game/Enemy/ComboAnim/Attack1
-MRUItem17=/Game/Enemy/ComboAnim/Attack2
-MRUItem18=/Game/Enemy/ComboAnim/Attack3
-MRUItem19=/Game/Enemy/ComboAnim/Kick
+MRUItem0=/Game/AI_Advanced/Boss/BOSS_TRY_BP
+MRUItem1=/Game/AI_Advanced/Boss/WB_HealthBarBOSS
+MRUItem2=/Game/AI_Advanced/Boss/AtributesForEntities_BP
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/AI_Advanced/BP_Contoller
+MRUItem5=/Game/AI_Advanced/BP_SpeedEnemySpawn
+MRUItem6=/Game/AI_Advanced/Boss/WB_BOSS
+MRUItem7=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
+MRUItem8=/Game/AI_Advanced/BD_AI_BOSS
+MRUItem9=/Game/AI_Advanced/BT_AI_BOSS
+MRUItem10=/Game/AI_Advanced/BOSS_TRY_BP
+MRUItem11=/Game/Enemy/ComboAnim/Notify_AnimComboEnd
+MRUItem12=/Game/Enemy/ComboAnim/BCP_AttackSystem
+MRUItem13=/Game/Enemy/ComboAnim/Notify_ComboAttack_AttackSword
+MRUItem14=/Game/Enemy/ComboAnim/Attack_IT
+MRUItem15=/Game/Enemy/ComboAnim/Kick_Montage
+MRUItem16=/Game/Enemy/ComboAnim/Attack3_Montage
+MRUItem17=/Game/Enemy/ComboAnim/Attack2_Montage
+MRUItem18=/Game/Enemy/ComboAnim/NewBlueprint
+MRUItem19=/Game/Enemy/ComboAnim/Attack1_Montage
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2749,11 +2745,18 @@ Slider.Clipping=True
 Slider.Navigation=True
 Slider.Localization=True
 Slider.Events=True
+BP_ThirdPersonCharacter_C.Components=True
+AtributesForEntities_BP_C.ComponentTick=True
+AtributesForEntities_BP_C.Tags=True
+AtributesForEntities_BP_C.ComponentReplication=True
+AtributesForEntities_BP_C.Activation=True
+AtributesForEntities_BP_C.Variable=True
+AtributesForEntities_BP_C.Cooking=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.Blackboard\" "
-Object="\"Object\" \"Object.Blackboard\" "
+Object="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
@@ -2907,9 +2910,9 @@ PaperTileMapComponent="\"Object\" "
 PaperTileMap="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
-Visual="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
-ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
+Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
+Visual="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
+ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Appearance.FillColorAndOpacity\" "
 UI_HuntForBlood_C="\"Object\" "
 UserWidget="\"Object\" "
 BP_Stadistics_C="\"Object\" "
@@ -3012,6 +3015,7 @@ Notify_ComboAttack_AttackSword_C="\"Object\" "
 BOSS_TRY_BP_C="\"Object\" "
 Slider="\"Object\" "
 WB_HealthBarBOSS_C="\"Object\" "
+AtributesForEntities_BP_C="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -3041,14 +3045,14 @@ Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 SceneComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -3057,7 +3061,7 @@ CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Varia
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -3204,6 +3208,7 @@ K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_V
 BOSS_TRY_BP_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 BP_Contoller_BOSS_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WB_HealthBarBOSS_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+AtributesForEntities_BP_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
