--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1257,28 +1257,31 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Input/IMC_Default
-MRUItem1=/Game/ThirdPerson/Input/Actions/IA_recoger
-MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Eqipamiento
-MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
-MRUItem4=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP
-MRUItem5=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Straps_lp
-MRUItem6=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Greatsword_lp
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas
-MRUItem9=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
-MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/E_TiposArmas
-MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
-MRUItem12=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
-MRUItem13=/Game/AI_Advanced/BP_Contoller
-MRUItem14=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem16=/Game/AI_Advanced/Boss/BOSS_TRY_BP
-MRUItem17=/Game/AI_Advanced/Boss/WB_HealthBarBOSS
-MRUItem18=/Game/AI_Advanced/Boss/AtributesForEntities_BP
-MRUItem19=/Game/AI_Advanced/BP_SpeedEnemySpawn
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem1=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Input/IMC_Default
+MRUItem4=/Game/ThirdPerson/Input/Actions/IA_recoger
+MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Eqipamiento
+MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
+MRUItem7=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP
+MRUItem8=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Straps_lp
+MRUItem9=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Greatsword_lp
+MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas
+MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
+MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/E_TiposArmas
+MRUItem13=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
+MRUItem14=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
+MRUItem15=/Game/AI_Advanced/BP_Contoller
+MRUItem16=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem17=/Game/AI_Advanced/Boss/BOSS_TRY_BP
+MRUItem18=/Game/AI_Advanced/Boss/WB_HealthBarBOSS
+MRUItem19=/Game/AI_Advanced/Boss/AtributesForEntities_BP
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3071,7 +3074,7 @@ MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem1=/Game/ThirdPerson/Maps/Level_Tester
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 AnimSequence.Animation=True
@@ -3091,15 +3094,15 @@ BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Variab
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 Ai_anim_BP_C=
 Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 SceneComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
-EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -3109,11 +3112,11 @@ PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 Enemy_Health_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
@@ -3229,7 +3232,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
-K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,PropertyWrapper.DefaultValueCategory.IteamData,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,BP_SpeedEnemySpawn_C.Physics.ConstraintsGroup
 ActorComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags
 SkeletalMesh=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
@@ -3693,7 +3696,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=237.600 Y=456.800
-WindowSize=X=1301.600 Y=741.600
+WindowSize=X=1303.200 Y=743.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
