sistema de muerte

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1257,31 +1257,28 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem1=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Input/IMC_Default
-MRUItem4=/Game/ThirdPerson/Input/Actions/IA_recoger
-MRUItem5=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Eqipamiento
-MRUItem6=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
-MRUItem7=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP
-MRUItem8=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Straps_lp
-MRUItem9=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Greatsword_lp
-MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas
-MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
-MRUItem12=/Game/ThirdPerson/Blueprints/Equipamiento/E_TiposArmas
-MRUItem13=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
-MRUItem14=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
-MRUItem15=/Game/AI_Advanced/BP_Contoller
-MRUItem16=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem17=/Game/AI_Advanced/Boss/BOSS_TRY_BP
-MRUItem18=/Game/AI_Advanced/Boss/WB_HealthBarBOSS
-MRUItem19=/Game/AI_Advanced/Boss/AtributesForEntities_BP
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/ThirdPerson/Maps/Level_Tester
+MRUItem2=/Game/ThirdPerson/Blueprints/Equipamiento/Equimamiento
+MRUItem3=/Game/ThirdPerson/Blueprints/Equipamiento/DataBase_Armas
+MRUItem4=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Equipamiento
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem7=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem8=/Game/ThirdPerson/Input/IMC_Default
+MRUItem9=/Game/ThirdPerson/Input/Actions/IA_recoger
+MRUItem10=/Game/ThirdPerson/Blueprints/Equipamiento/BP_sistema_Eqipamiento
+MRUItem11=/Game/ThirdPerson/Blueprints/Equipamiento/BP_Weapon
+MRUItem12=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP
+MRUItem13=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Straps_lp
+MRUItem14=/Game/ThirdPerson/uploads_files_4221719_Guts+Greatsword+ER+MP_Greatsword_lp
+MRUItem15=/Game/ThirdPerson/Blueprints/Equipamiento/Inventario
+MRUItem16=/Game/ThirdPerson/Blueprints/Equipamiento/E_TiposArmas
+MRUItem17=/Game/AI_Advanced/Boss/BP_Contoller_BOSS
+MRUItem18=/Game/AI_Advanced/BP_Contoller
+MRUItem19=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3696,7 +3693,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=237.600 Y=456.800
-WindowSize=X=1303.200 Y=743.200
+WindowSize=X=1306.400 Y=746.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3713,7 +3710,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/ThirdPerson/Maps
+UNR=../../../../../../Users/Boyga/Documents/GitHub/Hunt_for_blood/Content/ThirdPerson/Maps
 BRUSH=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/
 FBX=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/
 FBXAnim=C:/Users/LINO A/Desktop/Hunt_for_blood/Content/
